wrote big parts of conclusion

--- a/mymaster/references.bib
+++ b/mymaster/references.bib
@@ -2723,7 +2723,7 @@
 	journaltitle = {Computer},
 	author = {Benini, L. and De Micheli, G.},
 	date = {2002-01},
-	keywords = {average values, complex electronic engines, complex {SoCs}, Consumer electronics, Design methodology, design objectives, deterministic models, Engines, Fasteners, future {SoC} designs, hardware design, hardware-software codesign, integrated solution, interacting system-on-chip components, interconnecting components, layered methodology, layered micronetwork design methodology, microprocessor chips, modular component-based approach, Multimedia systems, multiprocessor interconnection networks, Network-on-a-chip, networks on chips, on-chip micronetworks, plug-and-play fashion, probabilistic metrics, Process design, process technologies, reconfigurable architectures, {SoC} design methodologies, {SoC} paradigm, software design, stochastic models, system on chip, System-on-a-chip, Telecommunication network reliability, Time to market, time-to-market pressure},
+	keywords = {Engines, hardware design, hardware-software codesign, microprocessor chips, average values, complex electronic engines, complex {SoCs}, Consumer electronics, Design methodology, design objectives, deterministic models, Fasteners, future {SoC} designs, integrated solution, interacting system-on-chip components, interconnecting components, layered methodology, layered micronetwork design methodology, modular component-based approach, Multimedia systems, multiprocessor interconnection networks, Network-on-a-chip, networks on chips, on-chip micronetworks, plug-and-play fashion, probabilistic metrics, Process design, process technologies, reconfigurable architectures, {SoC} design methodologies, {SoC} paradigm, software design, stochastic models, system on chip, System-on-a-chip, Telecommunication network reliability, Time to market, time-to-market pressure},
 	file = {Full Text:/home/danielsan/Zotero/storage/9CVFNUW3/Benini and De Micheli - 2002 - Networks on chips a new SoC paradigm.pdf:application/pdf;IEEE Xplore Abstract Record:/home/danielsan/Zotero/storage/7CU49A8U/references.html:text/html}
 }
 
@@ -2768,7 +2768,7 @@
 	journaltitle = {{IEEE} Micro},
 	author = {Davies, Mike and Srinivasa, Narayan and Lin, Tsung-Han and Chinya, Gautham and Cao, Yongqiang and Choday, Sri Harsha and Dimou, Georgios and Joshi, Prasad and Imam, Nabil and Jain, Shweta and Liao, Yuyun and Lin, Chit-Kwan and Lines, Andrew and Liu, Ruokun and Mathaikutty, Deepak and {McCoy}, Steven and Paul, Arnab and Tse, Jonathan and Venkataramanan, Guruguhanathan and Weng, Yi-Hsin and Wild, Andreas and Yang, Yoonseok and Wang, Hong},
 	date = {2018-01},
-	keywords = {Algorithm design and analysis, artificial intelligence, Biological neural networks, circuit optimisation, Computational modeling, Computer architecture, {CPU} iso-process-voltage-area, dendritic compartments, hierarchical connectivity, integrated circuit modelling, Intels process, {LASSO} optimization problems, learning (artificial intelligence), locally competitive algorithm, Loihi, machine learning, magnitude superior energy-delay-product, microprocessor chips, multiprocessing systems, neural chips, neuromorphic computing, neuromorphic manycore processor, Neuromorphics, Neurons, on-chip learning, programmable synaptic learning rules, size 14 nm, spike-based computation, spiking neural networks, synaptic delays},
+	keywords = {Computer architecture, Neurons, neural chips, learning (artificial intelligence), Neuromorphics, machine learning, artificial intelligence, circuit optimisation, spiking neural networks, Computational modeling, microprocessor chips, Algorithm design and analysis, Biological neural networks, {CPU} iso-process-voltage-area, dendritic compartments, hierarchical connectivity, integrated circuit modelling, Intels process, {LASSO} optimization problems, locally competitive algorithm, Loihi, magnitude superior energy-delay-product, multiprocessing systems, neuromorphic computing, neuromorphic manycore processor, on-chip learning, programmable synaptic learning rules, size 14 nm, spike-based computation, synaptic delays},
 	file = {IEEE Xplore Abstract Record:/home/danielsan/Zotero/storage/PZI8EBK7/8259423.html:text/html}
 }
 
@@ -2784,6 +2784,90 @@
 	journaltitle = {Computer},
 	author = {{DeBole}, Michael V. and Taba, Brian and Amir, Arnon and Akopyan, Filipp and Andreopoulos, Alexander and Risk, William P. and Kusnitz, Jeff and Ortega Otero, Carlos and Nayak, Tapan K. and Appuswamy, Rathinakumar and Carlson, Peter J. and Cassidy, Andrew S. and Datta, Pallab and Esser, Steven K. and Garreau, Guillaume J. and Holland, Kevin L. and Lekuch, Scott and Mastro, Michael and {McKinstry}, Jeff and di Nolfo, Carmelo and Paulovicks, Brent and Sawada, Jun and Schleupen, Kai and Shaw, Benjamin G. and Klamo, Jennifer L. and Flickner, Myron D. and Arthur, John V. and Modha, Dharmendra S.},
 	date = {2019-05},
-	keywords = {Biological neural networks, Brain modeling, Computational modeling, Computer architecture, {IBM} brain-inspired processor, inference mechanisms, low-precision synapses, neural chips, neural net architecture, Neurons, neurosynaptic computer, parallel neural network inference engine, Random access memory, spanning neuroscience, spiking neurons, Synapses, {TrueNorth}},
+	keywords = {Computer architecture, Neurons, spiking neurons, neural chips, Synapses, neural net architecture, Brain modeling, Computational modeling, Biological neural networks, {IBM} brain-inspired processor, inference mechanisms, low-precision synapses, neurosynaptic computer, parallel neural network inference engine, Random access memory, spanning neuroscience, {TrueNorth}},
 	file = {IEEE Xplore Abstract Record:/home/danielsan/Zotero/storage/SLY8BEF2/8713821.html:text/html}
+}
+
+@article{amunts_human_2016,
+	title = {The Human Brain Project: Creating a European Research Infrastructure to Decode the Human Brain},
+	volume = {92},
+	issn = {0896-6273},
+	url = {http://www.sciencedirect.com/science/article/pii/S0896627316307966},
+	doi = {10.1016/j.neuron.2016.10.046},
+	shorttitle = {The Human Brain Project},
+	abstract = {Decoding the human brain is perhaps the most fascinating scientific challenge in the 21st century. The Human Brain Project ({HBP}), a 10-year European Flagship, targets the reconstruction of the brain’s multi-scale organization. It uses productive loops of experiments, medical, data, data analytics, and simulation on all levels that will eventually bridge the scales. The {HBP} {IT} architecture is unique, utilizing cloud-based collaboration and development platforms with databases, workflow systems, petabyte storage, and supercomputers. The {HBP} is developing toward a European research infrastructure advancing brain research, medicine, and brain-inspired information technology.},
+	pages = {574--581},
+	number = {3},
+	journaltitle = {Neuron},
+	shortjournal = {Neuron},
+	author = {Amunts, Katrin and Ebell, Christoph and Muller, Jeff and Telefont, Martin and Knoll, Alois and Lippert, Thomas},
+	urldate = {2020-02-12},
+	date = {2016-11-02},
+	langid = {english},
+	file = {ScienceDirect Full Text PDF:/home/danielsan/Zotero/storage/7LLFJ238/Amunts et al. - 2016 - The Human Brain Project Creating a European Resea.pdf:application/pdf;ScienceDirect Snapshot:/home/danielsan/Zotero/storage/5XNLZR7P/S0896627316307966.html:text/html}
+}
+
+@article{brette_adaptive_2005,
+	title = {Adaptive Exponential Integrate-and-Fire Model as an Effective Description of Neuronal Activity},
+	volume = {94},
+	issn = {0022-3077},
+	url = {https://journals.physiology.org/doi/full/10.1152/jn.00686.2005},
+	doi = {10.1152/jn.00686.2005},
+	abstract = {We introduce a two-dimensional integrate-and-fire model that combines an exponential spike mechanism with an adaptation equation, based on recent theoretical findings. We describe a systematic method to estimate its parameters with simple electrophysiological protocols (current-clamp injection of pulses and ramps) and apply it to a detailed conductance-based model of a regular spiking neuron. Our simple model predicts correctly the timing of 96\% of the spikes (±2 ms) of the detailed model in response to injection of noisy synaptic conductances. The model is especially reliable in high-conductance states, typical of cortical activity in vivo, in which intrinsic conductances were found to have a reduced role in shaping spike trains. These results are promising because this simple model has enough expressive power to reproduce qualitatively several electrophysiological classes described in vitro.},
+	pages = {3637--3642},
+	number = {5},
+	journaltitle = {Journal of Neurophysiology},
+	shortjournal = {Journal of Neurophysiology},
+	author = {Brette, Romain and Gerstner, Wulfram},
+	urldate = {2020-02-13},
+	date = {2005-11-01},
+	file = {Full Text PDF:/home/danielsan/Zotero/storage/HYH7GZGS/Brette and Gerstner - 2005 - Adaptive Exponential Integrate-and-Fire Model as a.pdf:application/pdf;Snapshot:/home/danielsan/Zotero/storage/FRWDGTRG/jn.00686.html:text/html}
+}
+
+@article{sundstrom_distribution_2018,
+	title = {The distribution and role of functional abundance in cross-scale resilience},
+	volume = {99},
+	rights = {© 2018 by the Ecological Society of America},
+	issn = {1939-9170},
+	url = {https://esajournals.onlinelibrary.wiley.com/doi/abs/10.1002/ecy.2508},
+	doi = {10.1002/ecy.2508},
+	abstract = {The cross-scale resilience model suggests that system-level ecological resilience emerges from the distribution of species’ functions within and across the spatial and temporal scales of a system. It has provided a quantitative method for calculating the resilience of a given system and so has been a valuable contribution to a largely qualitative field. As it is currently laid out, the model accounts for the spatial and temporal scales at which environmental resources and species are present and the functional roles species play but does not inform us about how much resource is present or how much function is provided. In short, it does not account for abundance in the distribution of species and their functional roles within and across the scales of a system. We detail the ways in which we would expect species’ abundance to be relevant to the cross-scale resilience model based on the extensive abundance literature in ecology. We also put forward a series of testable hypotheses that would improve our ability to anticipate and quantify how resilience is generated, and how ecosystems will (or will not) buffer recent rapid global changes. This stream of research may provide an improved foundation for the quantitative evaluation of ecological resilience.},
+	pages = {2421--2432},
+	number = {11},
+	journaltitle = {Ecology},
+	author = {Sundstrom, Shana M. and Angeler, David G. and Barichievy, Chris and Eason, Tarsha and Garmestani, Ahjond and Gunderson, Lance and Knutson, Melinda and Nash, Kirsty L. and Spanbauer, Trisha and Stow, Craig and Allen, Craig R.},
+	urldate = {2020-02-16},
+	date = {2018},
+	langid = {english},
+	keywords = {abundance, community ecology, cross-scale resilience, functional diversity, macroecology, resilience, scales},
+	file = {Full Text:/home/danielsan/Zotero/storage/MVIXM9IV/Sundstrom et al. - 2018 - The distribution and role of functional abundance .pdf:application/pdf;Snapshot:/home/danielsan/Zotero/storage/X4YFV8MD/ecy.html:text/html}
+}
+
+@software{fardet_nest_2020,
+	title = {{NEST} 2.20.0},
+	url = {https://zenodo.org/record/3605514#.XkiiEOEo-kA},
+	abstract = {{NEST} is a simulator for spiking neural network models. Its main focus is on simulations that focus on the dynamics of single neurons and synapses in large neuronal systems rather than on the exact morphology of individual cells. For further information, visit http://www.nest-simulator.org. The release notes for this release are available at https://github.com/nest/nest-simulator/releases/tag/v2.20.0},
+	publisher = {Zenodo},
+	author = {Fardet, Tanguy and Vennemo, Stine Brekke and Mitchell, Jessica and Mørk, Håkon and Graber, Steffen and Hahne, Jan and Spreizer, Sebastian and Deepu, Rajalekshmi and Trensch, Guido and Weidel, Philipp and Jordan, Jakob and Eppler, Jochen Martin and Terhorst, Dennis and Morrison, Abigail and Linssen, Charl and Antonietti, Alberto and Dai, Kael and Serenko, Alexey and Cai, Binghuang and Kubaj, Piotr and Gutzen, Robin and Jiang, Hanjia and Kitayama, Itaru and Jürgens, Björn and Plesser, Hans Ekkehard},
+	urldate = {2020-02-16},
+	date = {2020-01-31},
+	doi = {10.5281/zenodo.3605514},
+	file = {Zenodo Snapshot:/home/danielsan/Zotero/storage/NL3W7CZW/3605514.html:text/html}
+}
+
+@article{davison_pynn_2009,
+	title = {{PyNN}: a common interface for neuronal network simulators},
+	volume = {2},
+	issn = {1662-5196},
+	url = {https://www.frontiersin.org/articles/10.3389/neuro.11.011.2008/full},
+	doi = {10.3389/neuro.11.011.2008},
+	shorttitle = {{PyNN}},
+	abstract = {Computational neuroscience has produced a diversity of software for simulations of networks of spiking neurons, with both negative and positive consequences. On the one hand, each simulator uses its own programming or configuration language, leading to considerable difficulty in porting models from one simulator to another. This impedes communication between investigators and makes it harder to reproduce and build on the work of others. On the other hand, simulation results can be cross-checked between different simulators, giving greater confidence in their correctness, and each simulator has different optimizations, so the most appropriate simulator can be chosen for a given modelling task. A common programming interface to multiple simulators would reduce or eliminate the problems of simulator diversity while retaining the benefits. {PyNN} is such an interface, making it possible to write a simulation script once, using the Python programming language, and run it without modification on any supported simulator (currently {NEURON}, {NEST}, {PCSIM}, Brian and the Heidelberg {VLSI} neuromorphic hardware). {PyNN} increases the productivity of neuronal network modelling by providing high-level abstraction, by promoting code sharing and reuse, and by providing a foundation for simulator-agnostic analysis, visualization, and data-management tools. {PyNN} increases the reliability of modelling studies by making it much easier to check results on multiple simulators. {PyNN} is open-source software and is available from http://neuralensemble.org/{PyNN}.},
+	journaltitle = {Frontiers in Neuroinformatics},
+	shortjournal = {Front. Neuroinform.},
+	author = {Davison, Andrew P. and Brüderle, Daniel and Eppler, Jochen M. and Kremkow, Jens and Muller, Eilif and Pecevski, Dejan and Perrinet, Laurent and Yger, Pierre},
+	urldate = {2020-02-16},
+	date = {2009},
+	keywords = {computational neuroscience, interoperability, large-scale models, Parallel Computing, python, reproducibility, simulation, translation},
+	file = {Full Text PDF:/home/danielsan/Zotero/storage/4LB8P5BW/Davison et al. - 2009 - PyNN a common interface for neuronal network simu.pdf:application/pdf}
 }
